# absencoid

./: CHANGELOG.txt  CMakeLists.txt  README.md  installer.nsi  make-installer.sh
absencoid/: absencoid  absencoid.dtd  absencoid.sql  example-dump.xml  example-update.xml
data/: absencoid.dtd  data.qrc  disclaimer.txt  example-dump.xml  example-update.xml
graphics/: graphics.qrc
graphics/src/: icon.xcf  logo.xcf
src/: AboutDialog.cpp  AboutDialog.h  AbsencesModel.cpp  AbsencesModel.h  AbsencesTab.cpp  AbsencesTab.h  CMakeLists.txt  ChangedLessonsModel.cpp  ChangedLessonsModel.h  ChangedLessonsTab.cpp  ChangedLessonsTab.h  ChangesModel.cpp  ChangesModel.h  ChangesTab.cpp  ChangesTab.h  ClassesDelegate.cpp  ClassesDelegate.h  ClassesModel.cpp  ClassesModel.h  ClassesTab.cpp  ClassesTab.h  ComboBoxDelegate.cpp  ComboBoxDelegate.h  ConfigurationModel.cpp  ConfigurationModel.h  CreateUpdateDialog.cpp  CreateUpdateDialog.h  DateEditDelegate.cpp  DateEditDelegate.h  Dump.cpp  Dump.h  HottestModel.cpp  HottestModel.h  MainWindow.cpp  MainWindow.h  SpinBoxDelegate.cpp  SpinBoxDelegate.h  Style.cpp  Style.h  SummaryTab.cpp  (+18 more)
